Permit all illegal access in Gradle daemon
Configuration cache can cause anything to be accessed reflectively.